@@ -1,155 +1,23 @@
-# 🚀 OffHeap-Forge
+# 🚀 OffHeap-Forge: Ultra-Low Latency Data Pipeline (V1.0)
 
-JDK 22+의 FFM API와 Rust를 결합하여 언어의 경계를 허물고, 하드웨어의 극한 성능을 뽑아내는 초저지연 데이터 엔진입니다. 자바의 생산성과 러스트의 무자비한 성능을 공유 메모리(mmap)로 연결하여 단 1바이트의 복사도 없는 Zero-Copy 파이프라인을 구축합니다.
+## 📌 프로젝트 개요 (Overview)
+**OffHeap-Forge**는 이기종 언어(Rust, Java, C++)와 Oracle DB를 결합하여 만든 **초저지연 실시간 데이터 처리 파이프라인 및 모니터링 대시보드**입니다.
+GC(Garbage Collection) 딜레이를 극한으로 회피하기 위해 Java의 **Off-Heap 메모리(FFM API)**와 **SIMD(Vector API)**를 활용하였으며, 초당 수백 건의 트랜잭션(TPS)을 병목 없이 Oracle DB에 적재하고 웹으로 실시간 스트리밍합니다.
 
-## 🛠 기술 스택 (Technical Stack)
+## ⚙️ 코어 아키텍처 (Core Architecture)
+1. **Rust Producer (Data Factory):** TCP 소켓을 통해 마이크로초 단위로 메트릭 데이터를 생성 및 전송.
+2. **Java Consumer (Zero-Contention Engine):** - Non-blocking NIO로 데이터를 수신하여 1024-버퍼 크기의 **Off-Heap Memory(MemorySegment)**에 직접 기록 (JVM GC 개입 차단).
+    - **C/C++ Native Hardware Timer**를 JNI/FFM API로 바인딩하여 마이크로초(μs) 단위 프로파일링 수행.
+3. **SIMD Vectorized Flusher:** Java Incubator Vector API를 활용해 Off-Heap 데이터를 4건씩 묶어(Batch) Oracle DB에 초고속 `MERGE INTO` 수행.
+4. **Smart Recovery Engine:** 서버 재가동 시 Oracle DB의 `MAX(SEQ_ID)`를 조회하여 딜레이(예열) 없이 파이프라인 즉시 복구.
 
-### 🚀 Engine & Runtime
-* **Runtime**: **JDK 25 (Early Access)**
-* **Language**: **Java 25**, **Rust** (High-Speed Analyzer), **C/C++** (Native Bridge)
-* **Core API**: **FFM (Foreign Function & Memory)**, **Vector API (SIMD)**, **MemoryLayout**
+## 📊 사이버펑크 실시간 대시보드 (Real-Time Dashboard)
+- **100ms Polling & Cache Busting:** Spring MVC(JSP) 기반으로 0.1초마다 DB를 조회하여 화면 새로고침 없이 Chart.js 심전도 그래프 렌더링.
+- **Live TPS Meter & Alert Terminal:** 현재 초당 처리량(TPS) 실시간 계산 및 임계치(Overload Spike) 돌파 시 하단 터미널에 `[CRITICAL]` 로그 누적.
+- **Kill-Switch & 명예의 전당:** 실시간 차트를 동결시키는 PAUSE 스위치 및 세션 내 가장 높은 수치를 기록한 `TOP 5 SPIKES` 랭킹 보드 탑재.
 
-### 🌐 Web & Enterprise
-* **Framework**: **eGovFrame 4.3 (Spring 5.3.37)**
-* **Web Server**: **Apache Tomcat 9.0.115**
-* **Persistence**: **MyBatis 3.5**, **DBCP2** (High-performance Connection Pool)
-* **Frontend**: **Terminal-inspired Matrix UI** (JSP, JSTL, CSS3)
-
-### 📊 Data & Infrastructure
-* **Database**: **Oracle DB 21c (XE)**
-* **Library**: `memmap2` (Rust), OJDBC8
-* **Infrastructure**: **Docker**, **Prometheus**, **Grafana** (Full-stack Monitoring)
-
----
-
-## 💡 핵심 구현 기술 (Key Implementation)
-
-### ⚡ Extreme Performance
-* **Zero-Copy Persistence**: `mmap` 기술을 활용해 디스크와 메모리를 동기화하여 가비지 컬렉션(GC) 오버헤드를 0%로 수렴시켰습니다.
-* **SIMD DB Flusher**: JDK Vector API를 통해 오프힙 데이터를 256-bit 단위로 병렬 처리, Oracle DB 벌크 인서트 처리량을 극대화했습니다.
-* **O(1) Shared Cursor IPC**: 자바와 러스트가 공유 메모리의 '커서'를 실시간 동기화하여, 데이터 복사 없이 상호 간의 포인터를 점프하며 읽어오는 초저지연 통신을 구현했습니다.
-
-### 🛠️ Legacy Modernization
-* **JDK 25 Bridge**: 10년 이상의 역사를 가진 eGovFrame 템플릿을 최신 **JDK 25** 환경에 이식하기 위해, 구형 라이브러리(Lombok 등)의 의존성을 제거하고 **정통 Spring DI** 방식으로 재설계했습니다.
-* **Polyglot Full-Stack Connectivity**: 네트워크 오버헤드가 없는 **OS 공유 메모리(Shared Memory)**를 통해 자바-러스트-오라클-웹 UI까지 이어지는 통합 데이터 파이프라인을 구축했습니다.
-* **Real-time Matrix Dashboard**: 초당 수만 건이 쏟아지는 오프힙 엔진의 상태를 별도의 복사 과정 없이 MyBatis 매퍼를 통해 실시간으로 시각화했습니다.
-
-## 📅 업데이트 내역
-
-### 🟧 [Season 3] Scalability & Connectivity (2026.03 ~ )
-
-## ⏸️ Phase 55: Kill-Switch & TOP 5 Spike Ranking
-- **Live Pause Engine (Kill-Switch)**: 초당 100건 이상 쏟아지는 실시간 데이터를 분석하기 위해, 화면 렌더링을 즉시 동결(Freeze)시키는 PAUSE 스위치 구현. (백엔드 파이프라인은 무중단 유지)
-- **Session TOP 5 Hall of Fame**: 관제 세션 동안 발생한 가장 높은 위험 수치(Spike) 5개를 실시간으로 추출하고 내림차순 정렬하여 우측 하단 전광판에 영구 기록하는 랭킹 보드 탑재.
-## 🚨 Phase 54: Live TPS Meter & Alert Terminal
-- **Real-Time TPS Engine**: JavaScript로 이전 Fetch 주기와의 Sequence 편차를 계산하여, 현재 파이프라인의 초당 DB 처리량(Transactions Per Second)을 화면에 실시간으로 출력 (평균 100~120 TPS 달성).
-- **Cyberpunk Alert Terminal**: Rust가 생성한 난수 데이터 중 임계치(50130 이상)를 돌파하는 Spike 발생 시, 즉각적으로 하단 터미널 UI에 `[CRITICAL]` 경고 로그를 누적시키는 실시간 이상 감지(Anomaly Detection) UI 구현.
-## 🧠 Phase 53: Smart Recovery Engine (Zero-Delay Startup)
-- **Sequence Overlap 방어**: Java 엔진 재가동 시 발생하는 1024 버퍼 리셋 및 DB MERGE 충돌(과거 데이터 무시 현상) 원인 규명.
-- **Auto-Sync DB Max ID**: Java 기동 시 Oracle DB에 `SELECT MAX(SEQ_ID)` 쿼리를 날려 마지막 작업 위치를 즉시 동기화. 예열 및 지연 시간(Delay)을 0초로 단축하여 즉각적인 실시간 파이프라인 가동 구현.
-- **Rust Auto-Reconnect**: Rust 생산자(Producer)에 `TcpStream` 기반 자동 재접속(Auto-Reconnect) 루프를 탑재하여, Java Consumer의 상태와 무관하게 무중단(Fault-tolerant) 데이터 전송 보장.
-## 🚀 Phase 52: Real-Time Cyberpunk Dashboard (Chart.js)
-- **100ms Ultra-Low Latency Polling**: Spring Web MVC(JSP)와 AJAX(`fetch`)를 활용하여 0.1초 단위로 Oracle DB의 최신 메트릭을 렌더링.
-- **Cache Busting & Live Graph**: 타임스탬프 쿼리스트링(`?_=...`)을 통해 브라우저 캐시를 무효화하고, Chart.js를 연동하여 Rust에서 생성된 데이터 스파이크를 실시간 심전도(Line Chart) 형태로 시각화.
-## Phase 51: Full-Stack Real-Time Pipeline Integration
-- **Rust Producer (Data Factory)**: TCP 소켓(Port 9999)을 통해 초당 100건의 실시간 메트릭 데이터를 생성 및 전송하는 클라이언트 구축.
-- **Java SIMD Consumer**: Zero-contention 네트워크 엔진으로 Rust의 데이터를 수신하고, C++ Native Timer 기반의 프로파일링과 함께 SIMD 가속을 활용하여 Oracle DB에 초고속 Batch Insert(MERGE) 수행.
-- **Real-Time Web Dashboard**: Spring MVC 기반의 JSON API(`/api/forge/liveData.do`)와 Vanilla JS `setInterval` + `fetch` API를 활용하여, 새로고침 없이 1초마다 화면이 갱신되는 실시간 스트리밍 UI 완성.
-- **Achievement**: 이기종 언어(Rust, Java, C++)와 데이터베이스(Oracle Docker), 그리고 웹(Spring/JSP)을 관통하는 초저지연 실시간 데이터 파이프라인 완벽 연결!
-## Phase 50: Real-time API Milestone
-- **Oracle DB Cloud-Native Setup**: Docker 전용 컨테이너(`oracle-OffHeap-Forge`) 구축 및 포트 1522 바인딩 완료.
-- **Persistent Storage**: 볼륨 마운팅을 통해 컨테이너 재시작 시 데이터 및 계정 정보 유지 설정.
-- **JSON Endpoint**: Spring MVC 기반 실시간 데이터 자판기 개통 (`/api/forge/liveData.do`).
-- **Tech Stack**: JDK 25, eGovFrame 4.3, Jackson Databind, Oracle 21c XE.
----
-* **Phase 49**: JDK 25 기반의 Off-heap 엔진 데이터를 eGovFrame WebUI로 실시간 이식 성공 (Legacy Modernization)
-* **Phase 48**: Modern Legacy - eGovFrame 4.3 프로젝트 생성 및 JDK 25 환경 이식 완료 (Lombok 제거 및 정통 Spring DI 전환)
-* **Phase 47**: Prometheus & Grafana 연동을 통한 실시간 초당 처리량(TPS) 모니터링 대시보드 구축 완료
-* **Phase 46**: `MERGE INTO` (Upsert) 구문을 활용한 DB Flusher 멱등성(Idempotency) 확보 및 크래시 복구 시 데이터 무결성 완벽 보장
-* **Phase 45**: Chaos Engineering - Consumer(Rust) 강제 종료 및 재기동 시 데이터 유실률 0% (Zero-Downtime Hot-Reload) 아키텍처 검증 완료
-* **Phase 44**: Rust 기반 컨슈머에 LLVM Auto-Vectorization(SIMD)을 활용한 4건 단위 Batch Processing 적용 및 누락 방지 로직 보완
-* **Phase 43**: 1:N Polyglot(Rust, Python) 다중 컨슈머 아키텍처 및 Rust 기반 JSON 감사 로그 시스템 구축
-* **Phase 42**: OS 하드웨어 틱(Tick)을 활용한 마이크로초(μs) 단위 초정밀 DB 인서트 프로파일러 장착
-* **Phase 41**: JDK FFM API 기반 C/C++ Native Bridge 연결 및 OS 초정밀 하드웨어 타이머(DLL) 연동 완료
-* **Phase 40**: Shared Memory 기반 Java ↔ Rust 양방향 Zero-Copy IPC (피드백 채널) 구축
-* **Phase 39**: Rust 측 실시간 데이터 필터링 및 임계치 감지(Alerting) 로직 완성
-* **Phase 38**: Shared Cursor(Head/Tail) 동기화를 통한 **O(1) Jump** 조회 최적화 구현
-* **Phase 37**: `memmap2` 라이브러리를 활용한 Rust 기반 Zero-Copy 메모리 리더 구축
-* **Phase 36**: JDK Vector API(SIMD) 기반 Oracle DB 비동기 Bulk Flusher 파이프라인 완성
-
-### 🟩 [Season 2] Operational Excellence (2025.12 ~ 2026.02)
-* **Phase 35**: mmap 기반 **Phoenix Recovery**(자가 복구) 로직 및 데이터 영속성 검증
-* **Phase 34**: 67,130 TPS 도달 시의 네트워크 병목 지점 파악 및 최적화 리포트 작성
-* **Phase 33**: Grafana 커스텀 대시보드 구축 및 실시간 트래픽 가시성 확보
-* **Phase 32**: Prometheus 규격 메트릭 익스포터 구축 및 엔드포인트(/metrics) 활성화
-* **Phase 31**: 오프힙 데이터 스냅샷 및 증분 백업 시스템 프로토타입 제작
-* **Phase 30**: 운영 환경 모니터링을 위한 Docker-Compose 기반 인프라 스택 구성
-
-### 🟦 [Season 1] The Core of Speed (2025.09 ~ 2025.11)
-* **Phase 29**: Java NIO Selector 기반 초저지연 비동기 TCP 게이트웨이 완공
-* **Phase 28**: **5.7ns** Latency 달성 및 Atomic 연산 성능 벤치마크 완료
-* **Phase 27**: 64-byte Cache Line Padding 적용으로 False Sharing 원천 차단
-* **Phase 26**: CAS(Compare-And-Swap) 기반 무경합(Lock-Free) 인덱스 관리자 구현
-* **Phase 25**: 고속 메모리 재사용을 위한 슬래브 할당기(Slab Allocator) 알고리즘 적용
-* **Phase 24**: MemoryLayout 기반 하드웨어 정렬(Alignment) 데이터 구조체 설계
-* **Phase 23**: VarHandle 기반 메모리 직접 접근 및 Volatile 가시성 확보
-* **Phase 22**: Arena 기반 오프힙 메모리 생명주기 관리 및 자원 누수 방지 로직 구축
-* **Phase 21**: Native 메모리 직접 할당(malloc) 및 세그먼트 경계 보호 로직 구현
-* **Phase 20**: 매뉴얼 메모리 해제를 통한 Zero-GC(가비지 컬렉터 무력화) 환경 달성
-* **Phase 19**: FFM API 기반 메모리 주소 역참조 및 포인터 연산 안정화
-* **Phase 18**: 하드웨어 최적화를 위한 Little-Endian 바이트 순서 고정 로직 적용
-* **Phase 17**: MemorySegment 슬라이싱을 통한 대용량 데이터 파티셔닝 기술 구현
-* **Phase 16**: JMH(Java Microbenchmark Harness) 기반 성능 측정 프레임워크 도입
-* **Phase 15**: 싱글 스레드 환경에서의 메모리 처리량(Throughput) 한계 측정
-* **Phase 14**: 오프힙 저장 전용 데이터 모델(Schema) 정의 및 직렬화 제거
-* **Phase 13**: Memory-mapped file I/O 프로토타입 제작 및 디스크 동기화 테스트
-* **Phase 12**: FFM API를 활용한 외부 C 네이티브 라이브러리 링크 기술 검증
-* **Phase 11**: 가상 메모리 주소 계산을 위한 커스텀 오프셋 계산 로직 구축
-* **Phase 10**: 멀티스레드 동시 접근 시의 데이터 무결성 테스트 시나리오 수행
-* **Phase 09**: Native 메모리 영역에서의 원자적 연산(Atomic) 프로토콜 설계
-* **Phase 08**: 고효율 데이터 수신을 위한 오프힙 버퍼 풀링(Pooling) 시스템 구축
-* **Phase 07**: 오프힙 기반 원형 큐(Ring Buffer) 개념 증명 및 설계 완료
-* **Phase 06**: Java 22 FFM(Foreign Function & Memory) API 개발 환경 세팅
-* **Phase 05**: Direct ByteBuffer와 MemorySegment 간 성능 비교 분석
-* **Phase 04**: 엔진 코어 아키텍처 및 넌블로킹(Non-blocking) 데이터 흐름 설계
-* **Phase 03**: 나노초(Nanosecond) 단위 처리 성능 목표 및 KPI 설정
-* **Phase 02**: CPU 캐시 라인 크기 감지 및 하드웨어 가속 전략 수립
-* **Phase 01**: OffHeap-Forge 프로젝트 초기화 및 기본 클래스 구조 생성
-
----
-
-## 🚀 How to Run
-
-엔진의 정상 작동을 위해 Java 엔진을 먼저 가동한 후 Rust 컨슈머를 실행해야 합니다.
-
-### 1. Prerequisites
-* **Oracle DB**: `system/oracle` 계정으로 접속 가능한 상태여야 함
-* **Rust**: `cargo` 명령어가 환경 변수에 등록되어 있어야 함
-
-### 2. Terminal 1: Java Main Engine
-```powershell
-# Compile
-javac --add-modules jdk.incubator.vector src/ForgeMain.java
-
-# Run
-java -cp "src;.;ojdbc8.jar" --add-modules jdk.incubator.vector ForgeMain
-```
-
-### 3. Terminal 2: Rust High-Speed Consumer
-```powershell
-cd pipeline-rust
-cargo run
-```
-
-### 4. Terminal 3: Traffic Injection (Testing)
-```powershell
-$client = New-Object System.Net.Sockets.TcpClient("127.0.0.1", 9999);
-$stream = $client.GetStream();
-$stream.Write([BitConverter]::GetBytes([long]99999), 0, 8);
-$client.Close();
-```
-
-### 5. Web Dashboard (eGovFrame)
-* **IDE**: IntelliJ IDEA (with Smart Tomcat Plugin)
-* **Access**: `http://localhost:8080/egovSampleList.do`
-* **Note**: 엔진이 가동 중이어야 실시간 데이터를 확인할 수 있습니다.
+## 🛠️ 기술 스택 (Tech Stack)
+- **Languages:** Java 25 (FFM API, Vector API), Rust, C/C++, JavaScript, HTML/CSS
+- **Database:** Oracle Database (Docker, XEPDB1)
+- **Web Framework:** Spring Web MVC, Apache Tomcat 10
+- **Libraries:** Chart.js, JNA/JNI
